--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,14 +1,46 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+       template="/WEB-INF/publicTemplate.xhtml"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://xmlns.jcp.org/jsf/passthrough"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
         Hello from Facelets
-        <br />
-        <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
+      <div class="large-3 large-centered columns">
+            <div class="login-box">
+                <div class="row">
+                    <div class="large-12 columns">
+                        <h:form>
+                            <div class="row">
+                                <div class="large-12 columns">
+                                    <h:inputText binding="#{jUsername}" class="#{not jUsername.valid ? 'error' : ''}" p:placeholder="Username" id="j_username" value="#{loginBean.username}"/>
+                                    <ui:fragment rendered="#{not jUsername.valid}">
+                                        <small class="error"><h:message for="j_username"/></small>
+                                    </ui:fragment>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="large-12 columns">
+                                    <h:inputSecret binding="#{jPassword}" class="#{not jPassword.valid ? 'error' : ''}" p:placeholder="Password" id="j_password" value="#{loginBean.password}"/>
+                                    <ui:fragment rendered="#{not jPassword.valid}">
+                                        <small class="error"><h:message for="j_password"/></small>
+                                    </ui:fragment>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="large-12 large-centered columns">
+                                    <h:commandButton class="button expand" action="#{loginBean.doLogin()}" value="Login"/>
+                                </div>
+                            </div>
+                        </h:form>
+                    </div>
+                </div>
+            </div>
+        </div>        
+
     </h:body>
 </html>
-
