Basic Crawler Functionality and EJB..

--- a/src/main/webapp/admin/welcome.xhtml
+++ b/src/main/webapp/admin/welcome.xhtml
@@ -20,7 +20,13 @@
         
                <div class="row">
             <div class="large-12 large-centered columns">
-                <h:form><h:commandButton class="button" action="#{crawlproductBean.executecrawler()}" value="Execute Crawler"/></h:form>
+                <h:form><h:commandButton class="button" action="#{crawlproductBean.executecrawler()}" value="Execute Crawler for bestbuy"/></h:form>
+            </div>
+        </div>
+        
+         <div class="row">
+            <div class="large-12 large-centered columns">
+                <h:form><h:commandButton class="button" action="#{wedSiteAdd.addWebsite()}" value="Add Website"/></h:form>
             </div>
         </div>
     </ui:define>
