--- a/src/main/webapp/mainpage.xhtml
+++ b/src/main/webapp/mainpage.xhtml
@@ -16,7 +16,7 @@
             <div class="large-12 large-centered columns">
                 <h:form><h:commandButton class="button" action="#{loginBean.doLogout()}" value="Logout"/></h:form>
                 <h:outputText>You are in main page </h:outputText>
-                <h:outputLabel for="usersPhone" value="#{mainpageBean.searchstring}"/>
+                <h:outputLabel for="SearchQuery" value="#{mainpageBean.searchstring}"/>
             </div>
         </div>
     </ui:define>
