--- a/src/main/webapp/user/welcome.xhtml
+++ b/src/main/webapp/user/welcome.xhtml
@@ -25,7 +25,7 @@
                     <h:commandLink action="#{mainpageBean.doSearch(inputvalue.value)}" value="Search Query"/></h:form>
             </div>
             <div class="large-12 large-centered columns">
-                <h:form><h:commandButton class="button" action="#{crawlproductBean.allProducts()}" value="Show All Products"/></h:form>
+                <h:form><h:commandButton class="button" action="#{crawlproductBean.getAllProducts()}" value="Show All Products"/></h:form>
             </div>
         </div>
     </ui:define>
