--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -3,13 +3,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
        template="/WEB-INF/publicTemplate.xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://xmlns.jcp.org/jsf/passthrough"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        Hello from Facelets
+       
       <div class="large-3 large-centered columns">
             <div class="login-box">
                 <div class="row">
